--- a/src/html/includes/institution.html
+++ b/src/html/includes/institution.html
@@ -1,7 +1,7 @@
 <section class="institution custom-section">
   <h2 class="institution__title section-title">447 заведений</h2>
   <div class="institution__cards">
-    <!-- snippets card-institution -->
+    <!-- snippets card_institution -->
     <div class="card-institution">
       <div class="card-institution__image">
         <picture class="card-institution__picture">
