--- a/src/scss/sections/home.scss
+++ b/src/scss/sections/home.scss
@@ -475,11 +475,16 @@
     color: #ff711f;
   }
 
-  .article__date-img {
+  .article__date-icon {
     width: 17px;
     height: 17px;
-    fill: #ff711f;
   }
+
+  // .article__date-img {
+  //   width: 17px;
+  //   height: 17px;
+  //   fill: #ff711f;
+  // }
 
   .article__date-time {
     font-size: 18px;
