--- a/src/scss/sections/home.scss
+++ b/src/scss/sections/home.scss
@@ -144,7 +144,8 @@
     padding-top: 9px;
   }
 
-  &__header-line-input {
+  &__header-line-value {
+    width: 100%;
     font-size: 22px;
     line-height: 25.78px;
     padding: 10px 0;
@@ -152,16 +153,41 @@
     color: var(--color-text-primary);
   }
 
+  &__header-line-input-container {
+    width: 292px;
+    position: relative;
+  }
+
+  &__header-line-data-icon {
+    position: absolute;
+    z-index: 3;
+    top: 48%;
+    right: 0;
+    transform: translate(0, -50%);
+    width: 100%;
+    height: 100%;
+    max-width: 20px;
+    max-height: 20px;
+  }
+
   &__header-button {
     height: 64px;
 
-    @include media-breakpoint-down(md) {
+    @include media-breakpoint-up(md) {
       width: 197px;
     }
 
     @include media-breakpoint-down(md) {
       width: 100%;
     }
+  }
+
+  #calendar .vanilla-calendar-day__btn_weekend {
+    color: var(--color-text-secondary);
+  }
+
+  #calendar .vanilla-calendar-week__day_weekend {
+    color: var(--color-text-secondary);
   }
 
   &__main {
@@ -220,7 +246,7 @@
   &__main-date {
     flex: content;
     width: 100%;
-    background: #000;
+    // background: #000;
     height: 300px;
     display: none;
   }
