--- a/src/html/includes/_html-top.html
+++ b/src/html/includes/_html-top.html
@@ -7,6 +7,8 @@
     <meta name="description" content="shopify-theme">
     <title><%=title%></title>
     <!-- <link rel="preload" href=".woff2" as="font" type="font/woff2" crossorigin> -->
+    <link href="https://cdn.jsdelivr.net/npm/vanilla-calendar-pro/build/vanilla-calendar.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/vanilla-calendar-pro/build/vanilla-calendar.min.js" defer></script>
     <link href="css/main.min.css" rel="stylesheet"/>
     <link href="favicon/favicon.ico" rel="shortcut icon"/>
   </head>
