--- a/src/html/includes/search_full.html
+++ b/src/html/includes/search_full.html
@@ -6,11 +6,43 @@
       <div class="search-full__header-lines">
         <label for="search-city" class="search-full__header-line">
           <p class="search-full__header-line-subtitle">Город</p>
-          <input type="text" class="search-full__header-line-input" value="Санкт-Петербург" />
+          <p class="search-full__header-line-value" value="Санкт-Петербург">Санкт-Петербург</p>
         </label>
-        <label for="search-date" class="search-full__header-line">
+        <label for="search-date" class="search-full__header-line search-full__header-line-data">
           <p class="search-full__header-line-subtitle">Дата</p>
-          <input type="date" class="search-full__header-line-input" value="Санкт-Петербург" />
+          <div class="search-full__header-line-input-container">
+            <p
+              type="text"
+              class="search-full__header-line-value"
+              value="21/02/2022 – 04/03/2022"
+              id="searchData"
+            >
+              21/02/2022 – 04/03/2022
+            </p>
+            <span class="search-full__header-line-data-icon">
+              <svg viewBox="0 0 17 17" fill="currentColor">
+                <path d="M5.66654 1.1333H4.5332V4.5333H5.66654V1.1333Z" fill="currentColor" />
+                <path d="M12.4663 1.1333H11.333V4.5333H12.4663V1.1333Z" fill="currentColor" />
+                <path
+                  d="M15.8671 15.8666H1.13379V2.2666H15.8671V15.8666ZM2.26712 14.7333H14.7338V3.39993H2.26712V14.7333Z"
+                  fill="currentColor"
+                />
+                <path d="M15.8671 5.6665H1.13379V6.79984H15.8671V5.6665Z" fill="currentColor" />
+                <path d="M6.80033 7.93311H5.66699V9.06644H6.80033V7.93311Z" fill="currentColor" />
+                <path d="M9.06693 7.93311H7.93359V9.06644H9.06693V7.93311Z" fill="currentColor" />
+                <path d="M13.6001 7.93311H12.4668V9.06644H13.6001V7.93311Z" fill="currentColor" />
+                <path d="M11.3335 7.93311H10.2002V9.06644H11.3335V7.93311Z" fill="currentColor" />
+                <path d="M4.53372 10.2002H3.40039V11.3335H4.53372V10.2002Z" fill="currentColor" />
+                <path d="M6.80033 10.2002H5.66699V11.3335H6.80033V10.2002Z" fill="currentColor" />
+                <path d="M9.06693 10.2002H7.93359V11.3335H9.06693V10.2002Z" fill="currentColor" />
+                <path d="M11.3335 10.2002H10.2002V11.3335H11.3335V10.2002Z" fill="currentColor" />
+                <path d="M13.6001 10.2002H12.4668V11.3335H13.6001V10.2002Z" fill="currentColor" />
+                <path d="M4.53372 12.4668H3.40039V13.6001H4.53372V12.4668Z" fill="currentColor" />
+                <path d="M6.80033 12.4668H5.66699V13.6001H6.80033V12.4668Z" fill="currentColor" />
+                <path d="M9.06693 12.4668H7.93359V13.6001H9.06693V12.4668Z" fill="currentColor" />
+              </svg>
+            </span>
+          </div>
         </label>
       </div>
       <a href="./search.html" class="search-full__header-button">
@@ -46,7 +78,7 @@
           <span class="search-full__item">Москва</span>
           <span class="search-full__item">Москва</span>
         </div>
-        <div class="search-full__main-content search-full__main-date"></div>
+        <div class="search-full__main-content search-full__main-date" id="calendar"></div>
         <div
           class="search-full__content-btn-close"
           onclick="(() =>
@@ -66,11 +98,32 @@
       </div>
       <div class="search-full__content-bottom">
         <div class="search-full__content-bottom-inputs">
-          <input type="text" class="search-full__content-bottom-input" value="16.02.23" />
+          <input
+            type="text"
+            class="search-full__content-bottom-input"
+            id="calendarInputFirst"
+            value="16.02.23"
+          />
           <span class="search-full__content-inner-separator"></span>
-          <input type="text" class="search-full__content-bottom-input" value="28.05.23" />
+          <input
+            type="text"
+            class="search-full__content-bottom-input"
+            id="calendarInputSecond"
+            value="28.05.23"
+          />
         </div>
-        <button class="search-full__content-bottom-button">Применить</button>
+        <button
+          type="button"
+          class="search-full__content-bottom-button"
+          onclick="(() => {
+            const firstData = window.calendarInputFirst.value
+            const secondData = window.calendarInputSecond.value
+            console.log(firstData.split('.').join('/'))
+            window.searchData.textContent = firstData.split('.').join('/') + ' - ' + secondData.split('.').join('/')
+          })()"
+        >
+          Применить
+        </button>
       </div>
     </div>
   </div>
